--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -89,7 +89,7 @@
     </div>
     
     <div class="span8">
-      <p>Ver el programa.</p>
+      <p>Ver el <%= link_to "programa de contenidos", curriculum_path %>.</p>
     </div>
   </div>
 
